# canonizer

./: .env.example  .gitignore  .specwright.yaml  CHANGELOG.md  Makefile  README.md  ROADMAP.md  package-lock.json  pyproject.toml
.aip_artifacts/AIP-canonizer-2025-11-12-001/: EXECUTION_SUMMARY.md
.aip_artifacts/AIP-canonizer-2025-11-13-001/: step-006-summary.md
.aip_artifacts/AIP-canonizer-2025-11-17-001/: COMPLETION_SUMMARY.md  execution-summary.md
.aip_artifacts/AIP-canonizer-2025-11-18-001/: COMPLETION_SUMMARY.md
.canonizer/: lock.json
.claude/: TASK.md
.specwright/aips/: bulk-import-command.yaml  canonizer-aip-v0.yaml  canonizer-aip-v01-registry.yaml  dataverse-and-stripe-schemas.yaml  dataverse-contacts-sessions-reports.yaml  email-formats-and-registry-update.yaml  local-registry-mvp.yaml  node-refactor.yaml  refactor-to-python-package.yaml  register-and-canonize-questionnaires.yaml  source-id-schema-update.yaml
.specwright/specs/: bulk-import-command.md  canonizer-aip-v0.md  canonizer-aip-v01-registry.md  dataverse-and-stripe-schemas.md  dataverse-contacts-sessions-reports.md  email-formats-and-registry-update.md  local-registry-mvp.md  node-refactor.md  refactor-to-python-package.md  register-and-canonize-questionnaires.md  remote-registry.md  source-id-schema-update.md
artifacts/governance/: decision-log.md  transform-mappings.md
artifacts/phase1/: fhir-mapping-research.md
artifacts/phase2/: financial-standards-research.md
artifacts/phase3/: stripe-transforms-validation.md
artifacts/test/: test-pass-confirmation.md
canonizer/: __init__.py  api.py  config.py
canonizer/callable/: __init__.py  result.py
canonizer/cli/: __init__.py  main.py
canonizer/cli/cmds/: diff.py  import_cmd.py  init.py  patch.py  registry.py  transform.py  validate.py
canonizer/core/: __init__.py  differ.py  jsonata_exec.py  node_bridge.py  patcher.py  runtime.py  validator.py
canonizer/local/: __init__.py  config.py  lock.py  resolver.py
canonizer/registry/: __init__.py  client.py  loader.py  transform_meta.py  validator.py
docs/: API.md  EMAIL_CANONICALIZATION.md  QUESTIONNAIRE_CANONICALIZATION.md  QUESTIONNAIRE_REGISTRY.md  REGISTRY.md
examples/: basic_usage.py  lorchestra_job.py
python/: pyproject.toml
python/canonizer/: __init__.py  api.py
python/tests/: __init__.py
python/tests/integration/: __init__.py  test_node_bridge.py
questionnaire_registry/: README.md  registry.json
questionnaire_registry/fscrs/1.0.0/: questionnaire.json
tests/callable/: __init__.py  test_execute.py  test_result.py
tests/fixtures/transforms/: simple_transform.jsonata  simple_transform.meta.yaml
tests/integration/: test_bulk_import.py  test_cli_compat.py  test_derived_transforms.py  test_email_golden.py  test_email_transforms.py  test_end_to_end.py  test_local_registry.py
tests/unit/: test_api.py  test_cli_init.py  test_differ.py  test_import_cmd.py  test_loader.py  test_local_config.py  test_patcher.py  test_registry_client.py  test_resolver.py  test_transform_meta.py  test_validator.py
transforms/clinical_session/: dataverse_session_to_canonical_v1.jsonata
transforms/email/: gmail_to_canonical_v1.meta.yaml
transforms/report/: dataverse_report_to_canonical_v1.jsonata
transforms/schemas/canonical/: clinical_session_v1-0-0.json  contact_v1-0-0.json  report_v1-0-0.json  (+1 more)
(+124 files in other folders)
